# variant-iterator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: README.md
include/: variant-iterator.hpp
source/: CMakeLists.txt
source/include/: variant-iterator.hpp
source/include/gch/: variant-iterator.hpp
source/test/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  main.cpp
